--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "acord",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/index.ts"
+    "dev": "tsx watch --env-file=.env src/index.ts",
+    "format": "prettier --write .",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
@@ -11,7 +13,13 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "@eslint/js": "^9.22.0",
+    "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "tsx": "^4.7.1",
+    "typescript-eslint": "^8.26.1"
   }
 }
