--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "acord",
-  "type": "module",
+  "private": "true",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
+    "build": "webpack -c ./webpack.config.js",
+    "start": "node dist/bundle.js",
     "format": "prettier --write .",
     "lint": "eslint ."
   },
@@ -19,7 +21,10 @@
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "ts-loader": "^9.5.2",
     "tsx": "^4.7.1",
-    "typescript-eslint": "^8.26.1"
+    "typescript-eslint": "^8.26.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
