--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "@hono/zod-validator": "^0.4.3",
+    "fast-average-color-node": "^3.1.0",
     "hono": "^4.7.4",
     "zod": "^3.24.2"
   },
