--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hono/zod-validator": "^0.4.3",
     "fast-average-color-node": "^3.1.0",
     "hono": "^4.7.4",
+    "sharp": "^0.33.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
